fix: remove scale effect on mobile

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -46,7 +46,9 @@
   }
 
   &:hover {
-	transform: scale(1.05);
+	@include media_larger_than_mobile() {
+		transform: scale(1.05);
+	}
   }
 
   h3 {
